kubernetes/eso.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: "demo"
  labels:
    app: nginx-deployment
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-deployment
    spec:
      containers:
      - image: nginx
        name: nginx
