kubernetes/thread-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thread-app-deployment
  labels:
    app: thread-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thread-app
  template:
    metadata:
      labels:
        app: thread-app
    spec:
      containers:
      - name: thread-app
        image: 372641111498.dkr.ecr.ap-south-1.amazonaws.com/thread-app:thread-app-7
        ports:
        - containerPort: 3000
