kubernetes/thread-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thread-app-service
spec:
  type: ClusterIP
  selector:
    app: thread-app
  ports:
    - port: 80
      targetPort: 3000
